# embassy-meshtastic

./: .gitignore  .gitmodules  LICENSE  README.md
experiment/: test.c
meshtassy-net/: Cargo.toml
meshtassy-net/examples/: test_channel_with_meshkey.rs
meshtassy-net/src/: channel.rs  header.rs  key.rs  lib.rs  node_database.rs
meshtassy-net/tests/: channel_tests.rs
meshtastic-crypto/: Cargo.toml
meshtastic-crypto/examples/: verify_meshkey_integration.rs
meshtastic-crypto/src/: header.rs  lib.rs
meshtastic-crypto/tests/: round_trip_tests.rs
meshtastic-protobufs/: Cargo.toml  build.rs
meshtastic-protobufs/src/: lib.rs
nrf/: Cargo.toml  build.rs
nrf/.cargo/: config.toml
nrf/src/: environmental_telemetry.rs  main.rs  node_database.rs
nrf/src/boards/: mod.rs  seeed_xiao_nrf52840.rs
packet_creation_test/: Cargo.toml
packet_creation_test/src/: main.rs
