[package]
name = "meshtastic-crypto"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["base64/std", "ctr/std"]
# Enable defmt formatting support for embedded logging (requires defmt runtime)
defmt = ["dep:defmt"]

[dependencies]
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
base64 = { version = "0.21", default-features = false }
defmt = { version = "0.3", optional = true }